# DocChat-Multi-Agent

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
agents/: relevance_checker.py  research_agent.py  verification_agent.py  workflow.py
config/: settings.py
document_processor/: file_handler.py
retriever/: builder.py
