[project]
name = "Dochat-multi-agent"
version = "0.1.0"
description = "Multi-agent document chat system"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "asgiref",
    "attrs",
    "backoff",
    "bcrypt",
    "beautifulsoup4",
    "build",
    "cachetools",
    "certifi",
    "cffi",
    "chardet",
    "charset-normalizer",
    "chroma-hnswlib",
    "chromadb",
    "click",
    "cohere",
    "coloredlogs",
    "cryptography",
    "dataclasses-json",
    "deepdiff",
    "deepsearch-glm",
    "deprecated",
    "dill",
    "distro",
    "docling",
    "docling-core",
    "docling-ibm-models",
    "docling-parse",
    "durationpy",
    "easyocr",
    "emoji",
    "et-xmlfile",
    "fastapi",
    "fastavro",
    "ffmpy",
    "filelock",
    "filetype",
    "flatbuffers",
    "frozenlist",
    "fsspec",
    "google-auth",
    "googleapis-common-protos",
    "gradio",
    "gradio-client",
    "greenlet",
    "grpcio",
    "h11",
    "html5lib",
    "httpcore",
    "httptools",
    "httpx",
    "httpx-sse",
    "huggingface-hub",
    "humanfriendly",
    "ibm-cos-sdk",
    "ibm-cos-sdk-core",
    "ibm-cos-sdk-s3transfer",
    "ibm-watsonx-ai",
    "idna",
    "imageio",
    "importlib-metadata",
    "importlib-resources",
    "jinja2",
    "jiter",
    "jmespath",
    "joblib",
    "jsonlines",
    "jsonpatch",
    "jsonpath-python",
    "jsonpointer",
    "jsonref",
    "jsonschema",
    "jsonschema-specifications",
    "kubernetes",
    "langchain",
    "langchain-cohere",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-ibm",
    "langchain-openai",
    "langchain-text-splitters",
    "langdetect",
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-sdk",
    "langsmith",
    "lazy-loader",
    "loguru",
    "lomond",
    "lxml",
    "markdown-it-py",
    "marko",
    "markupsafe",
    "marshmallow",
    "mdurl",
    "mmh3",
    "monotonic",
    "mpire",
    "mpmath",
    "msgpack",
    "multidict",
    "multiprocess",
    "mypy-extensions",
    "nest-asyncio",
    "networkx",
    "ninja",
    "nltk",
    "numpy",
    "oauthlib",
    "olefile",
    "onnxruntime",
    "openai",
    "opencv-python-headless",
    "openpyxl",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "orderly-set",
    "orjson",
    "overrides",
    "packaging",
    "pandas",
    "pillow",
    "posthog",
    "propcache",
    "protobuf",
    "psutil",
    "pyasn1",
    "pyasn1-modules",
    "pyclipper",
    "pycparser",
    "pydantic",
    "pydantic-settings",
    "pydantic-core",
    "pydub",
    "pygments",
    "pypdf",
    "pypdfium2",
    "pypika",
    "pyproject-hooks",
    "python-bidi",
    "python-dateutil",
    "python-docx",
    "python-dotenv",
    "python-iso639",
    "python-magic",
    "python-multipart",
    "python-oxmsg",
    "python-pptx",
    "pytz",
    "pyyaml",
    "rank-bm25",
    "rapidfuzz",
    "referencing",
    "regex",
    "requests",
    "requests-oauthlib",
    "requests-toolbelt",
    "rich",
    "rpds-py",
    "rsa",
    "rtree",
    "ruff",
    "safehttpx",
    "safetensors",
    "scikit-image",
    "scipy",
    "semantic-version",
    "semchunk",
    "shapely",
    "shellingham",
    "six",
    "sniffio",
    "soupsieve",
    "sqlalchemy",
    "starlette",
    "sympy",
    "tabulate",
    "tenacity",
    "tifffile",
    "tiktoken",
    "tokenizers",
    "tomlkit",
    "torch",
    "torchvision",
    "tqdm",
    "transformers",
    "typer",
    "types-pyyaml",
    "types-requests",
    "typing-inspect",
    "typing-extensions",
    "tzdata",
    "unstructured",
    "unstructured-client",
    "urllib3",
    "uvicorn",
    "uvloop",
    "watchfiles",
    "webencodings",
    "websocket-client",
    "websockets",
    "wrapt",
    "xlsxwriter",
    "yarl",
    "zipp",
    "zstandard",
    # Guardrails for Python 3.13 building blocks
    "numba>=0.61.0",
    "llvmlite>=0.44.0",
    # Windows/Linux GPU Specific Packages (Ignored automatically on Mac)
    "nvidia-cublas-cu12; sys_platform != 'darwin'",
    "nvidia-cuda-cupti-cu12; sys_platform != 'darwin'",
    "nvidia-cuda-nvrtc-cu12; sys_platform != 'darwin'",
    "nvidia-cuda-runtime-cu12; sys_platform != 'darwin'",
    "nvidia-cudnn-cu12; sys_platform != 'darwin'",
    "nvidia-cufft-cu12; sys_platform != 'darwin'",
    "nvidia-curand-cu12; sys_platform != 'darwin'",
    "nvidia-cusolver-cu12; sys_platform != 'darwin'",
    "nvidia-cusparse-cu12; sys_platform != 'darwin'",
    "nvidia-cusparselt-cu12; sys_platform != 'darwin'",
    "nvidia-nccl-cu12; sys_platform != 'darwin'",
    "nvidia-nvjitlink-cu12; sys_platform != 'darwin'",
    "nvidia-nvtx-cu12; sys_platform != 'darwin'",
    "triton; sys_platform != 'darwin'",
    "langchain-classic>=1.0.8",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "langchain-ollama>=1.1.0",
]

[tool.uv]
managed = true
